# Ghost_call

./: .env.example  .gitignore  GHOSTCALL_TECHNICAL_REPORT.md  README.md  main.py  pyproject.toml  render.yaml
app/: main.py  signaling.py
static/: app.js  index.html  manifest.json  offline.html  service-worker.js  styles.css
