[project]
name = "ghostcall"
version = "0.1.0"
description = "Privacy-first browser voice calling with WebRTC and FastAPI WebSocket signaling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "python-dotenv>=1.2.2",
    "pywebpush>=2.3.0",
]

[tool.uv]
package = false
